@@ -1,3 +1,9 @@
+2021-08-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/source_eval.R (source_and_eval_safe_with_hiding): New variant
+	with optional 'hiding' of a given file
+	* man/source_and_eval_safe.Rd: Documentation
+
 2019-09-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Date, Version): Roll minor version
@@ -24,7 +30,7 @@
 	* R/source_eval.R (source_and_eval_safe): Set the uid argument to
 	NULL so that non-root user can run this (without a uid change, of
 	course). Otherwise the functions are limited to root use.
-	
+
 	* R/source_eval.R (eval_safe_as): New helper function without file
 
 	* inst/tinytest/test_eval.R: Adjusted tests to not require uid
